Modernize the build and cleanup the repository content
https://github.com/eclipse-datatools/datatools/issues/1