@@ -9,6 +9,15 @@ package org.eclipse.datatools.enablement.ibm.db2.model.impl;
 
 import java.util.Collection;
 
+import org.eclipse.datatools.enablement.ibm.db2.model.DB2AccessPlan;
+import org.eclipse.datatools.enablement.ibm.db2.model.DB2ExtendedOptions;
+import org.eclipse.datatools.enablement.ibm.db2.model.DB2Function;
+import org.eclipse.datatools.enablement.ibm.db2.model.DB2ModelPackage;
+import org.eclipse.datatools.enablement.ibm.db2.model.DB2Routine;
+import org.eclipse.datatools.enablement.ibm.db2.model.DB2RoutineExtension;
+import org.eclipse.datatools.enablement.ibm.db2.model.DB2UserDefinedFunction;
+import org.eclipse.datatools.enablement.ibm.db2.model.OriginType;
+import org.eclipse.datatools.enablement.ibm.db2.model.SourceDialect;
 import org.eclipse.datatools.modelbase.sql.routines.impl.UserDefinedFunctionImpl;
 import org.eclipse.emf.common.notify.Notification;
 import org.eclipse.emf.common.notify.NotificationChain;
@@ -19,16 +28,6 @@ import org.eclipse.emf.ecore.impl.ENotificationImpl;
 import org.eclipse.emf.ecore.util.EObjectContainmentEList;
 import org.eclipse.emf.ecore.util.EObjectResolvingEList;
 import org.eclipse.emf.ecore.util.InternalEList;
-
-import org.eclipse.datatools.enablement.ibm.db2.model.DB2AccessPlan;
-import org.eclipse.datatools.enablement.ibm.db2.model.DB2ExtendedOptions;
-import org.eclipse.datatools.enablement.ibm.db2.model.DB2Function;
-import org.eclipse.datatools.enablement.ibm.db2.model.DB2ModelPackage;
-import org.eclipse.datatools.enablement.ibm.db2.model.DB2Routine;
-import org.eclipse.datatools.enablement.ibm.db2.model.DB2RoutineExtension;
-import org.eclipse.datatools.enablement.ibm.db2.model.DB2UserDefinedFunction;
-import org.eclipse.datatools.enablement.ibm.db2.model.OriginType;
-import org.eclipse.datatools.enablement.ibm.db2.model.SourceDialect;
 
 /**
  * <!-- begin-user-doc -->
@@ -1276,7 +1275,7 @@ public class DB2UserDefinedFunctionImpl extends UserDefinedFunctionImpl implemen
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__SPECIAL_REGISTER:
 				return getSpecialRegister();
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__CHANGE_STATE:
-				return new Integer(getChangeState());
+				return Integer.valueOf(getChangeState());
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__DEBUG_ID:
 				return getDebugId();
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__PROGRAM_TYPE:
@@ -1294,7 +1293,7 @@ public class DB2UserDefinedFunctionImpl extends UserDefinedFunctionImpl implemen
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__SCRATCH_PAD:
 				return isScratchPad() ? Boolean.TRUE : Boolean.FALSE;
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__SCRATCH_PAD_LENGTH:
-				return new Integer(getScratchPadLength());
+				return Integer.valueOf(getScratchPadLength());
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__FUNCTION_TYPE:
 				return getFunctionType();
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__PREDICATE:
@@ -1302,7 +1301,7 @@ public class DB2UserDefinedFunctionImpl extends UserDefinedFunctionImpl implemen
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__EXTERNAL_ACTION:
 				return isExternalAction() ? Boolean.TRUE : Boolean.FALSE;
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__CARDINALITY:
-				return new Integer(getCardinality());
+				return Integer.valueOf(getCardinality());
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__ALLOW_PARALLEL:
 				return isAllowParallel() ? Boolean.TRUE : Boolean.FALSE;
 			case DB2ModelPackage.DB2_USER_DEFINED_FUNCTION__RETURN_CLAUSE:
