@@ -84,7 +84,7 @@ class JJTIngresSQLParserState {
 
 
   void openNodeScope(Node n) {
-    marks.push(new Integer(mk));
+    marks.push(Integer.valueOf(mk));
     mk = sp;
     n.jjtOpen();
   }
