@@ -25,8 +25,6 @@ import org.eclipse.emf.ecore.impl.ENotificationImpl;
 import org.eclipse.emf.ecore.util.EObjectContainmentEList;
 import org.eclipse.emf.ecore.util.InternalEList;
 
-import org.eclipse.emf.ecore.util.EObjectResolvingEList;
-
 /**
  * <!-- begin-user-doc -->
  * An implementation of the model object '<em><b>Sybase ASE Base Table</b></em>'.
@@ -766,20 +764,20 @@ public class SybaseASEBaseTableImpl extends SybaseBaseTableImpl implements Sybas
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__LOCK_SCHEMA:
                 return getLockSchema();
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__FILL_FACTOR:
-                return new Integer(getFillFactor());
+                return Integer.valueOf(getFillFactor());
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__MAX_ROW_PER_PAGE:
-                return new Integer(getMaxRowPerPage());
+                return Integer.valueOf(getMaxRowPerPage());
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__EXP_ROW_SIZE:
-                return new Integer(getExpRowSize());
+                return Integer.valueOf(getExpRowSize());
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__RESERVE_PAGE_GAP:
-                return new Integer(getReservePageGap());
+                return Integer.valueOf(getReservePageGap());
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__IDENTITY_GAP:
-                return new Integer(getIdentityGap());
+                return Integer.valueOf(getIdentityGap());
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__SEGMENT:
                 if (resolve) return getSegment();
                 return basicGetSegment();
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__CONCURRENCY_OPT_THRESHOLD:
-                return new Integer(getConcurrencyOptThreshold());
+                return Integer.valueOf(getConcurrencyOptThreshold());
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__PARTITION_CONDITION:
                 return getPartitionCondition();
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__TABLE_ONLY_CACHE_INFO:
@@ -789,7 +787,7 @@ public class SybaseASEBaseTableImpl extends SybaseBaseTableImpl implements Sybas
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__LOCK_PROMOTION:
                 return getLockPromotion();
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__PARTITIONS:
-                return new Integer(getPartitions());
+                return Integer.valueOf(getPartitions());
             case SybaseasesqlmodelPackage.SYBASE_ASE_BASE_TABLE__TEXT_IMAGE_SEGMENT:
                 if (resolve) return getTextImageSegment();
                 return basicGetTextImageSegment();
