@@ -20,10 +20,6 @@ import org.eclipse.datatools.enablement.sybase.ase.models.sybaseasesqlmodel.Syba
 import org.eclipse.datatools.enablement.sybase.ase.models.sybaseasesqlmodel.partition.SybaseASEPartition;
 import org.eclipse.datatools.enablement.sybase.models.sybasesqlmodel.SybaseAuthorizedObject;
 import org.eclipse.datatools.enablement.sybase.models.sybasesqlmodel.SybaseBaseTable;
-import org.eclipse.datatools.enablement.sybase.models.sybasesqlmodel.SybasesqlmodelPackage;
-
-import org.eclipse.datatools.modelbase.sql.accesscontrol.Privilege;
-
 import org.eclipse.datatools.modelbase.sql.constraints.CheckConstraint;
 import org.eclipse.datatools.modelbase.sql.tables.impl.PersistentTableImpl;
 import org.eclipse.emf.common.notify.Notification;
@@ -33,7 +29,6 @@ import org.eclipse.emf.ecore.EClass;
 import org.eclipse.emf.ecore.InternalEObject;
 import org.eclipse.emf.ecore.impl.ENotificationImpl;
 import org.eclipse.emf.ecore.util.EObjectContainmentEList;
-import org.eclipse.emf.ecore.util.EObjectResolvingEList;
 import org.eclipse.emf.ecore.util.InternalEList;
 
 /**
@@ -799,20 +794,20 @@ public class SybaseASETableImpl extends PersistentTableImpl implements SybaseASE
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__LOCK_SCHEMA:
                 return getLockSchema();
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__FILL_FACTOR:
-                return new Integer(getFillFactor());
+                return Integer.valueOf(getFillFactor());
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__MAX_ROW_PER_PAGE:
-                return new Integer(getMaxRowPerPage());
+                return Integer.valueOf(getMaxRowPerPage());
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__EXP_ROW_SIZE:
-                return new Integer(getExpRowSize());
+                return Integer.valueOf(getExpRowSize());
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__RESERVE_PAGE_GAP:
-                return new Integer(getReservePageGap());
+                return Integer.valueOf(getReservePageGap());
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__IDENTITY_GAP:
-                return new Integer(getIdentityGap());
+                return Integer.valueOf(getIdentityGap());
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__SEGMENT:
                 if (resolve) return getSegment();
                 return basicGetSegment();
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__CONCURRENCY_OPT_THRESHOLD:
-                return new Integer(getConcurrencyOptThreshold());
+                return Integer.valueOf(getConcurrencyOptThreshold());
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__PARTITION_CONDITION:
                 return getPartitionCondition();
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__TABLE_ONLY_CACHE_INFO:
@@ -822,7 +817,7 @@ public class SybaseASETableImpl extends PersistentTableImpl implements SybaseASE
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__LOCK_PROMOTION:
                 return getLockPromotion();
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__PARTITIONS:
-                return new Integer(getPartitions());
+                return Integer.valueOf(getPartitions());
             case SybaseasesqlmodelPackage.SYBASE_ASE_TABLE__TEXT_IMAGE_SEGMENT:
                 if (resolve) return getTextImageSegment();
                 return basicGetTextImageSegment();
